<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home_black_24dp" />
    <item android:id="@+id/menu_find_activity"
        android:title="@string/find_activity"
        android:icon="@drawable/ic_search_black_24dp" />
    <item android:id="@+id/menu_activity"
        android:title="@string/add_activity"
        android:icon="@drawable/ic_add_circle_outline_black_24dp" />
    <item android:id="@+id/menu_message"
        android:title="@string/message"
        android:icon="@drawable/ic_message_black_24dp" />
    <item android:id="@+id/menu_schedule"
        android:title="@string/schedule"
        android:icon="@drawable/ic_date_range_black_24dp" />
</menu>