<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_16dp"
    tools:context=".fragment.AddActivityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_name"/>

        <EditText
            android:id="@+id/edt_name"
            android:inputType="text"
            android:padding="@dimen/dimen_16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_your_activity_name"/>

        <TextView
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_category"/>

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_blue_grey_2"
            android:padding="@dimen/dimen_16dp"
            android:textColor="@color/color_blue_grey_2"
            android:textSize="@dimen/dimen_20sp"/>

        <TextView
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"/>

        <EditText
            android:id="@+id/edt_location"
            android:inputType="text"
            android:padding="@dimen/dimen_16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_your_location"/>

        <TextView
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"/>

        <EditText
            android:id="@+id/edt_date"
            android:inputType="none"
            android:padding="@dimen/dimen_16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_your_activity_date"/>

        <TextView
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"/>

        <EditText
            android:id="@+id/edt_time"
            android:inputType="none"
            android:padding="@dimen/dimen_16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_your_activity_time"/>

        <TextView
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capacity"/>

        <EditText
            android:id="@+id/edt_capacity"
            android:inputType="number"
            android:padding="@dimen/dimen_16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_your_capacity"/>

        <TextView
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"/>

        <EditText
            android:id="@+id/edt_description"
            android:inputType="text"
            android:padding="@dimen/dimen_16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_your_description"/>

        <Button
            android:id="@+id/btn_create"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/create"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</ScrollView>